# project-2_patov_dpo_nod

./: Makefile  README.md  demo_step_2.cast  demo_step_3.cast  demo_step_4.cast  pyproject.toml
src/primitive_db/: core.py  decorators.py  engine.py  main.py  parser.py  utils.py
